# HW_WEB7

./: README.md  alembic.ini  config.ini  main.py  my_select.py  pyproject.toml  signup.py
createbase/: create_table.py  seeds.py
database/: models.py  repository.py
migrations/: env.py
migrations/versions/: 0ea3ab689a27_fix_bug_student.py  5c0ce8e99a38_init.py  60d04807db06_init.py  b2b4277e6212_init.py
src/: create_table.py  crud.py  db.py  models.py  seeds.py
tests/: Create_data_base_postgres_hw_web7.sql  create_table_test.py
