[tool.poetry]
name = "hw-web7"
version = "0.1.0"
description = "Sqlalchemy"
authors = ["Denko <officedenko@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
